--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,81 +2,114 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    margin: 0px;
+    margin: 0em;
+    padding: 0em;
     list-style: none;
     text-decoration: none;
 }
 
 .header {
-    font-size: 19px;
+    font-size: 1.188rem;
     background-color: white;
     color: #014713;
     display: flex;  
     position: fixed;
     z-index: 1;  
     font-family: sans-serif;
+    height: 8.7vh;
+    width: 100vw;
+    box-shadow: 0px 1px 40px 0px rgba(0,0,0,0.1);
+    min-width: 100em;
 }
 
-ul {
-    display: inline-flex;
-    margin-top: 30px;
+.dropbtn {
+  background-color: #014713;
+  color: white;
+  padding-top: 1.688rem;
+  padding-bottom: 1.688rem;
+  padding-left: 4.313rem;
+  padding-right: 1.938rem;
+  font-family: "Jost";
+  font-size: 1.125rem;
+  font-weight: 700;
+  border: none;
+  cursor: pointer;
 }
 
-li {
-    padding-right: 40px;
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-a {
-    color: white;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #014713;
+  min-width: 100em;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.openmenu {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 30px;
-    padding-right: 34px;
-    background-color: #014713;
-    font-size: 18px;
-    font-weight: 799;
+.dropdown-content a {
+  color: white;
+  font-weight: 500;
+  font-size: 1.125rem;
+  font-family: "Jost";
+  padding: 30px 4.313rem;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f4f5f4;
+  color: #014713;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #014713;
+}
+
+.wow {
     display: flex;
-    color: white;
-}
-
-.menubutton {
-    padding-left: 10px;
+    width: 100vw;
+    justify-content: flex-end;
 }
 .logo {
-    text-align: center;
-    margin-left: 12%;
-    margin-top: 5px;
-    margin-right: 34%;
+  margin: auto;
+  width: 2em;
+  padding-left: 45rem;
 }
 
 .logo img {
-    max-width: 70%;
-    max-height: 70%;
+    max-width: 10em;
+    max-height: 10em;
 }
 
 .search {
-    padding-top: 25px;
-    padding-right: 25px;
+    padding-top: 1.875rem;
+    padding-right: 3em;
+    cursor: pointer;
 }
 
 .bg1 {
     background-image: url(school\ 1.jpg);
-    width: 100%;
+    width: 109.9em;
     height: 82vh;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 70px;
-    padding-left: 145px;
+    position: relative;
+    padding-top: 4.375rem;
+    padding-left: 9.063rem;
  }
 
  .content{
     padding: 120px;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(4px);
-    color: white;
     border-radius: 150px;
     width: fit-content;
     height: fit-content;
@@ -98,10 +131,10 @@ a {
 
   .bg2 {
     display: flex;
-    margin-top: 60px;
-    margin-left: 410px;
-    margin-right: 410px;
-    margin-bottom: 85px;
+    padding-top: 60px;
+    padding-left: 410px;
+    padding-right: 410px;
+    padding-bottom: 85px;
     justify-content: space-between;
   }
   
@@ -117,8 +150,7 @@ a {
     text-decoration: none;
     display: inline-block;
     font: 16px sans-serif;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
     cursor: pointer;
     background-color: white;
     border: 1.7px solid #004712; 
@@ -128,14 +160,14 @@ a {
   .text h1 {
     font-family: "Jost";
     font-size: 45px;
-    margin: 0px 0px 16px;
+    padding: 0px 0px 16px;
     color: #004712;
   }
 
   .text h5 {
     font-family: sans-serif;
     font-size: 24px;
-    margin: 0px 0px 24px;
+    padding: 0px 0px 24px;
     font-weight: 100;
     color: #434244;
   }
@@ -143,7 +175,7 @@ a {
   .text p {
     font-family: sans-serif;
     font-size: 18px;
-    margin: 0px 0px 18px;
+    padding: 0px 0px 18px;
     color: #434244;
     line-height: 27px;
   }
@@ -154,6 +186,7 @@ a {
     padding-top: 110px;
     background-color: #f4f5f4;
     justify-content: space-between;
+    height: 70vh;
   }
  
   .bg3 img {
@@ -162,18 +195,20 @@ a {
     max-height: 30%;
 }
 
-.image2-3 {
+.image2-3  {
     display: flex;
+    justify-content: center;
 }
 
 .image4-5 {
     display: flex;
+    justify-content: center;
 }
 
 .image4-5 p{
-    padding-top: 150px;
-    padding-left: 100px;
-    font: 79px  "Vujahday Script", cursive;
+    padding-top: 130px;
+    padding-left: 5%;
+    font: 90px  "Vujahday Script", cursive;
     color: #DEB509;
     font-weight: 400;
 }
@@ -190,7 +225,7 @@ a {
     text-decoration: none;
     display: inline-block;
     font: 16px sans-serif;
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
     cursor: pointer;
     background-color: #f4f5f4;
     border: 1.7px solid #004712; 
@@ -199,7 +234,7 @@ a {
 
   .text2 {
     padding-top: 100px;
-    padding-left: 100px;
+    padding-right: 6%;
   }
 
   .text2 h1 {
@@ -213,4 +248,275 @@ a {
     font-size: 20px;
     color: #434244;
     line-height: 27px;
+    padding-bottom: 10px;
+    padding-top: 10px;
   }
+
+.bg4 {
+    padding-left: 390px;
+    padding-right: 410px;
+    padding-top: 110px;
+    background-color: #f4f5f4;
+    justify-content: space-between;
+    height: 70vh;
+  }
+ 
+.bg4 img {
+    border: 7px solid #f4f5f4;
+    max-width: 30%;
+    max-height: 30%;
+}
+
+.image6-7  {
+    display: flex;
+    justify-content: center;
+}
+
+.image8-9 {
+    display: flex;
+    justify-content: center;
+}
+
+.image8-9 p{
+    padding-top: 130px;
+    padding-right: 9%;
+    font: 90px  "Vujahday Script", cursive;
+    color: #DEB509;
+    font-weight: 400;
+}
+
+.button3:hover {
+    background-color: #004712;
+    color: #f4f5f4;
+  }
+
+  .button3 {
+    color: #004712;
+    padding: 13px 31px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px sans-serif;
+    transition-duration: 0.5s;
+    cursor: pointer;
+    background-color: #f4f5f4;
+    border: 1.7px solid #004712; 
+    font-weight: 700;
+  }
+
+  .text3 {
+    padding-top: 100px;
+    padding-left: 9.5%;
+  }
+
+  .text3 h1 {
+    font-family: "Jost";
+    font-size: 35px;
+    color: #004712;
+  }
+
+  .text3 p {
+    font-family: sans-serif;
+    font-size: 20px;
+    color: #434244;
+    line-height: 27px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+
+  .bg5 {
+    padding-left: 390px;
+    padding-right: 410px;
+    padding-top: 110px;
+    background-color: #f4f5f4;
+    justify-content: space-between;
+    height: 80vh;
+  }
+ 
+  .bg5 img {
+    border: 7px solid #f4f5f4;
+    max-width: 30%;
+    max-height: 10%;
+}
+
+.image10-11  {
+    display: flex;
+    justify-content: center;
+}
+
+.image12-13 {
+    display: flex;
+    justify-content: center;
+}
+
+.image12-13 p{
+    padding-top: 130px;
+    padding-left: 2%;
+    font: 90px  "Vujahday Script", cursive;
+    color: #DEB509;
+    font-weight: 400;
+}
+
+.button4:hover {
+    background-color: #004712;
+    color: #f4f5f4;
+  }
+
+  .button4 {
+    color: #004712;
+    padding: 13px 31px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px sans-serif;
+    transition-duration: 0.5s;
+    cursor: pointer;
+    background-color: #f4f5f4;
+    border: 1.7px solid #004712; 
+    font-weight: 700;
+  }
+
+  .text4 {
+    padding-top: 100px;
+    padding-right: 6%;
+  }
+
+  .text4 h1 {
+    font-family: "Jost";
+    font-size: 35px;
+    color: #004712;
+  }
+
+  .text4 p {
+    font-family: sans-serif;
+    font-size: 20px;
+    color: #434244;
+    line-height: 27px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+
+  .bg6 {
+    display: block;
+    padding-top: 60px;
+    padding-left: 410px;
+    padding-right: 410px;
+    padding-bottom: 85px;
+    justify-content: space-between;
+  }
+
+  .bg6 h1 {
+    font-family: "Jost";
+    font-size: 55px;
+    padding: 0px 0px 16px;
+    color: #004712;
+    text-align: center;
+  }
+
+  .bg6 p {
+    font-family: sans-serif;
+    font-size: 28px;
+    padding: 0px 0px 15px;
+    color: #434244;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+.bg7 {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 45px;
+  background-color: #004712;
+}
+
+.p1 {
+  padding-left: 200px;
+  padding-right: 400px;
+}
+
+.p2 {
+  padding-left: 400px;
+  padding-right: 100px;
+}
+  .p1 h1{
+    color: #DEB509;
+    font-family: "Jost", sans-serif;
+    font-size: 20px;
+  }
+
+  .p1 h5 {
+    font-weight: 600;
+    font-style: italic;
+    font-family: sans-serif;
+    color: #DEB509;
+    padding-top: 15px;
+    font-size: 20px;
+  }
+
+  .p1 p {
+    font-family: sans-serif;
+    color: white;
+    font-size: 20px;
+    font-weight: 100px;
+    padding-bottom: 5px;
+    line-height: 2;
+  }
+
+  .p1 h6{
+    color: white;
+    font-family: sans-serif;
+    padding: 10px 0px;
+    font-size: 30px;
+    padding-bottom: 20px;
+  }
+
+  .p2 h1{
+    color: #DEB509;
+    font-family: "Jost", sans-serif;
+    font-size: 20px;
+    padding-bottom: 10px;
+  }
+
+  .p2 ul {
+    font-family: sans-serif;
+    color: white;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 2.5;
+  }
+
+  /* For mobile phones:
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  /* .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  /* .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+} */
