--- a/html/css/style.css
+++ b/html/css/style.css
@@ -477,46 +477,63 @@
     padding-bottom: 10px;
   }
 
-  .p2 ul {
-    font-family: sans-serif;
-    color: white;
-    font-size: 20px;
-    font-weight: normal;
-    line-height: 2.5;
-  }
+.p2 ul {
+  font-family: sans-serif;
+  color: white;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 2.5;
+}
 
-  /* For mobile phones:
-[class*="col-"] {
+.bg8 {
+  background-image: url(indoor-shot-pleased-dark-skinned-successful-man-dressed-elegnatly-carries-documentation.jpg);
   width: 100%;
+  height: 75vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-@media only screen and (min-width: 600px) {
-  /* For tablets: */
-  /* .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+.content2 {
+  padding-top: 15%;
+  padding-left: 6em;
+  padding-right: 15em;
+  color: #014713;
+  display: flex;
+  justify-content: space-between;
 }
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  /* .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-} */
+
+.content2 h1 {
+  font-size: 7rem;
+  font-family: "Jost";
+  font-weight: 800;
+}
+
+.content2 h2 {
+  font-size: 7rem;
+  font-family: "Jost";
+  font-weight: 800;
+  color: #DEB509;
+}
+
+.bg9 {
+  padding-top: 70px;
+  padding-left: 28.5%;
+  padding-right: 28.5%;
+  padding-bottom: 70px;
+  justify-content: center;
+  text-align: left;
+  font-family: "jost";
+  font-size: 17px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.bg9 p{
+  padding-bottom: 2%;
+}
+
+.bg9 a{
+  color: #014713;
+  text-decoration: underline;
+}
