--- a/html/css/style.css
+++ b/html/css/style.css
@@ -96,7 +96,7 @@
 }
 
 .bg1 {
-    background-image: url(school\ 1.jpg);
+    background-image: url(/images/school\ 1.jpg);
     width: 109.9em;
     height: 82vh;
     background-repeat: no-repeat;
@@ -486,7 +486,7 @@
 }
 
 .bg8 {
-  background-image: url(indoor-shot-pleased-dark-skinned-successful-man-dressed-elegnatly-carries-documentation.jpg);
+  background-image: url(/images/21.jpg);
   width: 100%;
   height: 75vh;
   background-repeat: no-repeat;
@@ -536,4 +536,72 @@
 .bg9 a{
   color: #014713;
   text-decoration: underline;
+}
+
+.bg10 {
+  background-image: url(/images/20.jpg);
+  width: 100%;
+  height: 75vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+
+.content3 {
+  padding-top: 17%;
+  padding-left: auto;
+  padding-right: auto;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.content3 h1 {
+  font-size: 5rem;
+  font-family: "Jost";
+  font-weight: 700;
+}
+
+.bg11 {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 57%;
+  text-align: center;
+  font-family: "Jost";
+}
+
+.bg11 h1{
+  color: #014713;
+  font-size: 2.7rem;
+  padding-bottom: 5%;
+}
+
+.content4 {
+  display: flex;
+  justify-content: center;
+}
+
+.content4 img{
+  max-width: 70%;
+  max-height: 18.5rem;
+}
+
+.innercontent4 {
+  text-align: left;
+  text-justify: inter-word;
+  padding-left: 2rem;
+  padding-top: 0.5rem;
+}
+
+.innercontent4 h6 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding-bottom: 2rem;
+}
+
+.innercontent4 p {
+  font-weight: 350;
+  font-size: 1.05rem;
 }
